Fixed Uneven AllProjects Cards

--- a/src/resources/sass/main.css
+++ b/src/resources/sass/main.css
@@ -1336,6 +1336,7 @@ footer div {
   flex-direction: column;
   align-items: flex-start;
   height: 100%;
+  width: 100%;
   background-color: var(--light-navy);
   padding: 2rem 1.75rem;
   transition: var(--transition);
@@ -1353,6 +1354,7 @@ footer div {
   justify-content: space-between;
   margin-bottom: 2rem;
   align-items: flex-end;
+  width: 100%;
 }
 .projects__grid__item header > svg {
   height: 4rem;
